Update to @capacitor/core@5.0.4